force-app/main/default/objects/Sentry_Alert__c/Sentry_Alert__c.object-meta.xml
<CustomObject>
    <description>Generated detections and policy outcomes for security and observability workflows.</description>
    <label>Sentry Alert</label>
    <nameField>
        <displayFormat>SAL-{000000}</displayFormat>
        <label>Sentry Alert Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sentry Alerts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>