force-app/main/default/objects/Sentry_Alert__c/fields/Assigned_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Analyst__c</fullName>
    <label>Assigned Analyst</label>
    <length>80</length>
    <type>Text</type>
</CustomField>