force-app/main/default/objects/Sentry_Alert__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Salesforce</fullName><default>true</default><label>Salesforce</label></value>
            <value><fullName>Slack</fullName><default>false</default><label>Slack</label></value>
            <value><fullName>Webhook</fullName><default>false</default><label>Webhook</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>