force-app/main/default/objects/Sentry_Alert__c/fields/Incident__c.field-meta.xml
<CustomField>
    <fullName>Incident__c</fullName>
    <label>Incident</label>
    <referenceTo>Sentry_Incident__c</referenceTo>
    <relationshipLabel>Incident Alerts</relationshipLabel>
    <relationshipName>IncidentAlerts</relationshipName>
    <type>Lookup</type>
</CustomField>