force-app/main/default/objects/Sentry_Alert__c/fields/Suppressed__c.field-meta.xml
<CustomField>
    <fullName>Suppressed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suppressed</label>
    <type>Checkbox</type>
</CustomField>