force-app/main/default/objects/Sentry_Alert__c/fields/Suppression_Key__c.field-meta.xml
<CustomField>
    <fullName>Suppression_Key__c</fullName>
    <label>Suppression Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>